Basic game functionality completed:
Blocks reveal words when click, words display hidden on failed match, blocks disappear on match, score counter increments

--- a/src/app/main-game/memory-blocks/block-display/block-display.component.css
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.css
@@ -1,4 +1,11 @@
 .displayBlock {
+    background-color: #CBF7ED;
     min-width: 200px;
     min-height: 200px;
+    outline: none;
+    text-decoration: none;
+}
+
+.hidden {
+    visibility: hidden;
 }
