Small cosmetic adjustments, validation for same block selection added

--- a/src/app/main-game/memory-blocks/block-display/block-display.component.css
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.css
@@ -1,4 +1,6 @@
 .displayBlock {
+    text-align: center;
+    color: #161925;
     background-color: #CBF7ED;
     min-width: 200px;
     min-height: 200px;
