Refactored click event to take place in parent, then added additional validation so user cannot select more than 2 blocks

--- a/src/app/main-game/memory-blocks/memory-blocks.component.html
+++ b/src/app/main-game/memory-blocks/memory-blocks.component.html
@@ -5,8 +5,10 @@
     <div class="memoryBlock" *ngFor="let w of words; let i = index">   
         <app-block-display [setDisplayStatus]="displayStatus.asObservable()"
             [setCompletedStatus]="markCompleted.asObservable()"
-            [selWord]="words[i]" [indexNum]="i"
-            (selectedIndex)="setSelectedIndex($event)"
+            [indexMarkSetSelected]="indexSelection.asObservable()"
+            [selWord]="words[i]" [indexNum]="i"     
+            (click)="selectBlock(i)"       
             ></app-block-display>                               
+            <!-- (selectedIndex)="setSelectedIndex($event)" -->
     </div>
 </div>
