--- a/src/app/main-game/memory-blocks/block-display/block-display.component.html
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.html
@@ -1,5 +1,5 @@
 <span [ngClass]="{'hidden': completed}"
-(click)="select()" style="cursor: pointer" class="list-group-item clearfix displayBlock" id="displaySel">            
+style="cursor: pointer" class="list-group-item clearfix displayBlock" id="displaySel">            
     <div class="pull-up">
         <p>{{ displayWord === true ? selWord : "" }}</p>
     </div>    
