--- a/src/app/main-game/memory-blocks/block-display/block-display.component.html
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.html
@@ -1,4 +1,4 @@
-<span [ngClass]="{'hidden': completed}"
+<span [ngClass]="{'hidden': completed}" (click)="getCompletedStatus()"
 style="cursor: pointer" class="list-group-item clearfix displayBlock" id="displaySel">            
     <div class="pull-up">
         <p>{{ displayWord === true ? selWord : "" }}</p>
