--- a/src/app/main-game/memory-blocks/memory-blocks.component.html
+++ b/src/app/main-game/memory-blocks/memory-blocks.component.html
@@ -1,13 +1,15 @@
 <div class="game-display">
     <!-- <div class="memoryBlock" *ngFor="let t of [].constructor(test)"> -->
         <h3>Score: {{ playerScore }}</h3>
-        <br>
-    <div class="memoryBlock" *ngFor="let w of words; let i = index">   
+        <button (click)="reset()" type="button">New Game</button>
+        <br>        
+    <div class="memoryBlock" *ngFor="let w of words; let i = index" [ngClass]="{'hidden': false}"   >   
         <app-block-display [setDisplayStatus]="displayStatus.asObservable()"
             [setCompletedStatus]="markCompleted.asObservable()"
             [indexMarkSetSelected]="indexSelection.asObservable()"
             [selWord]="words[i]" [indexNum]="i"     
-            (click)="selectBlock(i)"       
+            (click)="selectBlock(i)"    
+            (completedStatus)="checkCompletedStatus($event)"            
             ></app-block-display>                               
             <!-- (selectedIndex)="setSelectedIndex($event)" -->
     </div>
