- Brief tidy up of console debugging - Blocks now remain on normal mode slightly transparent

--- a/src/app/main-game/memory-blocks/block-display/block-display.component.html
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.html
@@ -1,4 +1,5 @@
-<span [ngClass]="{'hidden': displayBlock.completedStatus}"
+<span [ngClass]="{'hidden': displayBlock.completedStatus && !isNormalMode, 
+'normalMode': isNormalMode && displayBlock.completedStatus}"
 style="cursor: pointer" class="list-group-item clearfix displayBlock" id="displaySel">            
     <div class="pull-up">        
         <p>{{ displayBlock.revealed === true ? selWord : "" }}</p>
