Added animations for block turning. Introduced subject to game state service for triggering the animation, refactored methods which reveal block

--- a/src/app/main-game/memory-blocks/block-display/block-display.component.html
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.html
@@ -1,5 +1,6 @@
 <span [ngClass]="{'hidden': displayBlock.completedStatus && !isNormalMode, 
 'normalMode': isNormalMode && displayBlock.completedStatus}"
+[@flipBlock]="currentState"
 style="cursor: pointer" class="list-group-item clearfix displayBlock" id="displaySel">            
     <div class="pull-up">        
         <p>{{ displayBlock.revealed === true ? selWord : "" }}</p>
