--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="headerEle">
     <nav class="navbar navbar-light">
-        <a class="navbar-brand headerText" href="#">Default</a>
+        <a class="navbar-brand headerText" >Hardboiled Memory Game</a>
       </nav>
 </div>
