--- a/src/app/main-game/memory-blocks/memory-blocks.component.html
+++ b/src/app/main-game/memory-blocks/memory-blocks.component.html
@@ -1,5 +1,5 @@
 <button class="gameHeader" (click)="reset()" type="button">New Game</button>
-<button class="gameHeader" [disabled]="gameCompleted" (click)="revealAll()" type="button">Reveal All</button>
+<button class="gameHeader" [disabled]="gameCompleted" (click)="revealBtn()" type="button">Reveal All</button>
 
 <h4 *ngIf="attemptsRemaining > 0" class="gameHeader">Attempts Remaining: {{ attemptsRemaining }} |</h4>
 <h4 class="gameHeader">Score: {{ playerScore }}</h4>
