--- a/src/app/main-game/memory-blocks/block-display/block-display.component.css
+++ b/src/app/main-game/memory-blocks/block-display/block-display.component.css
@@ -14,5 +14,13 @@
 
 .normalMode {
     opacity: 0.5;
-    text-decoration: none;    
+    text-decoration: none;
+}
+
+.textContent {
+    width: 160px;
+    height: 160px;
+    display: table-cell;
+    text-align: center;    
+    vertical-align: middle;
 }
